[project]
name = "aci"
version = "0.0.1-beta.3"
description = "agent computer interface by aipolabs"
authors = [{ name = "Aipolabs", email = "support@aipolabs.xyz" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.31.0,<0.32.0",
    "pydantic>=2.11.2,<3.0.0",
    "sqlalchemy>=2.0.35,<3.0.0",
    "pgvector>=0.3.4,<0.4.0",
    "Authlib>=1.3.2,<2.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "httpx>=0.27.2,<0.28.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "openai>=1.72.0,<2.0.0",
    "click>=8.1.7,<9.0.0",
    "openapi-spec-validator>=0.7.1,<0.8.0",
    "jsonschema>=4.23.0,<5.0.0",
    "limits>=3.13.0,<4.0.0",
    "aws-cdk-lib>=2.164.1,<3.0.0",
    "constructs>=10.0.0,<11.0.0",
    "jinja2>=3.1.5,<4.0.0",
    "deepdiff>=8.2.0,<9.0.0",
    "python-json-logger>=3.2.1,<4.0.0",
    "logfire[fastapi,sqlalchemy]>=3.6.4,<4.0.0",
    "sentry-sdk[fastapi]>=2.22.0,<3.0.0",
    "google-api-python-client>=2.163.0,<3.0.0",
    "aws-encryption-sdk[mpl]>=4.0.0,<5.0.0",
    "boto3>=1.37.9,<2.0.0",
    "rich>=13.9.4,<14.0.0",
    "propelauth-fastapi>=4.2.5,<5.0.0",
    "svix>=1.63.1,<2.0.0",
    "stripe>=12.0.1",
    "e2b-code-interpreter>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-subtests>=0.14.1,<0.15.0",
    "mypy>=1.11.2,<2.0.0",
    "alembic>=1.13.3,<2.0.0",
    "ruff>=0.9.9,<0.10.0",
    "pre-commit>=4.0.0,<5.0.0",
    "responses>=0.25.3,<0.26.0",
    "respx>=0.21.1,<0.22.0",
    "types-jsonschema>=4.23.0,<5.0.0",
    "google-api-python-client-stubs>=1.29.0,<2.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "venv", "build", "dist", "aci/alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
    "C4",  # flake8-comprehensions
]

# N501 is line to long error, we current have 200 comments that are longer than 100
# characters, need to fix them gradually. Ignoring this error for now.
ignore = ["W", "D", "ERA001", "N806", "E501", "N805", "RUF012"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
# Keep import-not-found errors
ignore_missing_imports = false
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
strict_equality = true

# Ignore missing type stubs for specific modules
[[tool.mypy.overrides]]
module = "pgvector.sqlalchemy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "authlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "propelauth_fastapi"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "propelauth_py.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "e2b_code_interpreter"
ignore_missing_imports = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
